# Takuzu_Game

./: .gitignore  CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_sdl.c  game_sdl.h  game_solve.c  game_struct.h  game_test.c  game_text.c  game_tools.c  game_tools.h  model.c  model.h
web/: demo.js  game.html  game.js  game.wasm  mystyle.css  wrapper.c
web/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_random.c  game_random.h  game_solve.c  game_struct.h  game_tools.c  game_tools.h  queue.c  queue.h
